Change colors and logo

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color:aquamarine !important;
+  background-color:#212529 !important;
 }
 
 h1 {
